# python-project-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-dockerhub.yml  publish-pypi.yml
docker/: Dockerfile  docker-compose.yaml
tests/: test_basic.py
